# HPC-school

./: .gitmodules  CMakeLists.txt  README.md  add_vector.cpp  main.cpp  misc.hpp  mpienv  mpienv.hpp  nbody.cpp
